--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-hiiii
+hi, this is wavon's repository for wavon's arcade. you can find the site here > "sites.google.com/view/wavons-arcade"
+enjoy!
